k8s/yuwa-osm-api.yaml
# kubectl -n aorsormor-system apply -f yuwa-osm-api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aorsormor-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yuwa-osm-api
  namespace: aorsormor-system
  labels:
    app: yuwa-osm-api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: yuwa-osm-api
  template:
    metadata:
      labels:
        app: yuwa-osm-api
    spec:
      nodeSelector:
        longhorn: "storage"
      imagePullSecrets:
        - name: docr-pull-secret

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc

      containers:
        - name: yuwa-osm-api
          image: registry.digitalocean.com/minerta-k8s/yuwaosm-api:dev5
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 30
            failureThreshold: 3

          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
              subPath: yuwa-osm-api
---
apiVersion: v1
kind: Service
metadata:
  name: yuwa-osm-api
  namespace: aorsormor-system
spec:
  type: ClusterIP
  selector:
    app: yuwa-osm-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yuwa-osm-api-ingress
  namespace: aorsormor-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000,http://localhost:8081,https://api-genh.hss.moph.go.th,https://genh.hss.moph.go.th,http://yuwa-osm-api,http://yuwa-osm-api.aorsormor-system.svc.cluster.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
    - hosts:
        - api-genh.hss.moph.go.th
      secretName: hss-moph-go-th-tls
  rules:
    - host: api-genh.hss.moph.go.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yuwa-osm-api
                port:
                  number: 80
